--- a/assets/style/kalkulator.css
+++ b/assets/style/kalkulator.css
@@ -65,7 +65,7 @@ body{
 .history{
     width: 55%;
     float: right;
-    margin: 30px auto 0 auto;
+    margin: 25px 20px 0 auto;
     overflow: scroll;
 }
 
